--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ button {
     color: inherit;
 }
 
+button:hover {
+    background-color:#0d101f;
+}
+
 body {
     color: #fff;
     font-family: 'sf-pro-display';
