--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ body {
 }
 
 .header__btn {
+    display: block;
     font-size: 24px;
     line-height: 29px;
     text-transform: uppercase;
@@ -161,6 +162,10 @@ body {
     width: 100%;
     border: 1px solid #fff;
     padding: 15px 10px 16px;
+}
+
+.header__btn:hover {
+    background-color:#0d101f;
 }
 
 .header__description {
